# sts_lightspeed

./: .gitignore  AUDIT_REPORT_v2.3.4.md  BASELINE.md  CHANGELOG.md  CMakeLists.txt  README.md  apply_all.py  bc_diff.txt  defect_attacks.cpp  defect_skills.cpp  fix_bc.py  fix_last.py  fix_remaining.py  inject_bindings.py  inject_defect.py  pyproject.toml  silent_skills2.cpp  temp_silent.txt  watcher_skills.cpp
.agents/workflows/: gsd_defect.md  gsd_mechanics.md  gsd_silent.md  gsd_watcher.md
apps/: stress_test.cpp  unit_tests.cpp
bindings/: bindings-util.cpp  slaythespire.cpp  slaythespire.h
docs/: KNOWN_ISSUES.md
include/combat/: ActionQueue.h  Actions.h  BattleContext.h  CardInstance.h  CardManager.h  CardSelectInfo.h  Monster.h  Player.h
include/constants/: Cards.h  PlayerStatusEffects.h
include/game/: GameContext.h  Random.h
include/sim/: SimHelpers.h
include/sim/search/: ScumSearchAgent2.h
include/util/: StsAssert.h
integration/: STEAM_SETUP.md  config.yaml  run_diff_logger.py  run_sync_baseline.sh  run_tests.py  setup_communication_mod.sh  test_bridge_lock.py  test_diff_logger.py
integration/harness/: __init__.py  bridge_lock.py  combat_journal.py  diff_logger.py  discrepancy_reporter.py  game_controller.py  interactive_sync.py  reporter.py  simulator_controller.py  state_comparator.py
integration/scenarios/defect/: basic_combat.yaml
integration/scenarios/silent/: basic_combat.yaml
integration/scenarios/watcher/: basic_combat.yaml
python/sts_lightspeed/: __init__.py
scripts/codegen/: README.md  apply_all.py  defect_powers.cpp  fix_replacements.py  silent_attacks.cpp  silent_powers.cpp  silent_skills1.cpp  watcher_attacks.cpp  watcher_powers.cpp
src/combat/: Actions.cpp  BattleContext.cpp  CardInstance.cpp  CardManager.cpp  Monster.cpp  MonsterSpecific.cpp  Player.cpp
src/game/: Deck.cpp  GameContext.cpp  Map.cpp
src/sim/: BattleSimulator.cpp  SimHelpers.cpp
src/sim/search/: Action.cpp  BattleScumSearcher2.cpp  ScumSearchAgent2.cpp  SimpleAgent.cpp
src/util/: StsAssert.cpp
tests/integration/harness/: scenario_loader.py
tests/python/: conftest.py  test_card_cost.py  test_cpp_unit_tests.py  test_nightmare_engine.py  test_smoke.py  test_sync_harness_translator.py  test_threading.py
