[build-system]
requires = ["scikit-build-core >=0.10", "pybind11 >=2.13.6"]
build-backend = "scikit_build_core.build"

[project]
name = "sts_lightspeed"
version = "0.2.0"
description = "High-performance, RNG-accurate Slay the Spire simulator with Python bindings."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "gamerpuppy + community" },
]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/DarkAutumn/sts_lightspeed"
Upstream = "https://github.com/gamerpuppy/sts_lightspeed"

[tool.scikit-build]
cmake.version = ">=3.19"
cmake.args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/sts_lightspeed"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.pytest.ini_options]
testpaths = ["tests/python", "integration"]
markers = [
    "freethreading: requires free-threaded Python build",
    "skip_unless_steam: requires running Steam StS via ModTheSpire",
]
